--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <br>
+    <button class="b1">      Search      </button> 
+    <br>
+    <br>
+    <button class="b2">+</button> 
+    <br>
+    <br>
+    <button class="b3">   Create Account   </button> 
 </body>
 </html>
